@@ -48,7 +48,7 @@ noinst_PROGRAMS = lib500 lib501 lib502 lib503 lib504 lib505 lib506	\
   lib507 lib508 lib509 lib510 lib511 lib512 lib513 lib514 lib515 lib516	\
   lib517 lib518 lib519 lib520 lib521 lib523 lib524 lib525 lib526 lib527	\
   lib529 lib530 lib532 lib533 lib536 lib537 lib540 lib541 lib542 lib543 \
-  lib544 lib545 lib547 lib548 lib549
+  lib544 lib545 lib547 lib548 lib549 lib552
 
 # Dependencies (may need to be overriden)
 LDADD = $(LIBDIR)/libcurl.la
@@ -146,3 +146,4 @@ lib548_CFLAGS = -DLIB548
 
 lib549_SOURCES = lib549.c $(SUPPORTFILES)
 
+lib552_SOURCES = lib552.c $(SUPPORTFILES)
